--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,7 @@
   color: $header-text-color;
   background-color: $header-background-color;
   padding-block: $header-padding-block;
+  z-index: 10;
 
   &__inner {
     display: flex;
