--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -24,6 +24,7 @@ h1 {
   font-weight: $heading-font-weight;
   line-height: $heading-line-height;
   text-transform: $heading-text-transform;
+  margin-bottom: $heading-margin-bottom;
 }
 
 h2 {
@@ -33,6 +34,7 @@ h2 {
   font-weight: $heading-font-weight;
   line-height: $heading-line-height;
   text-transform: $heading-text-transform;
+  margin-bottom: $heading-margin-bottom;
 }
 
 h3 {
@@ -42,5 +44,6 @@ h3 {
   font-weight: $heading-font-weight;
   line-height: $heading-line-height;
   text-transform: $heading-text-transform;
+  margin-bottom: $heading-margin-bottom;
 }
 
