--- a/sass/abstracts/_tokens.scss
+++ b/sass/abstracts/_tokens.scss
@@ -5,7 +5,7 @@
 
 // THEME STYLE
 
-$active-theme: $dark;
+$active-theme: $light;
 $enable-media-query-dark-mode: false;
 
 
@@ -19,6 +19,7 @@ $heading-text-transform: uppercase;
 $heading-1-font-size: $font-size-900;
 $heading-2-font-size: $font-size-800;
 $heading-3-font-size: $font-size-700;
+$heading-margin-bottom: 1rem;
 
 
 // BODY
